<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name">ブクマ！</string>
  <string name="app_name_dev">ブクマ！DEV</string>
  <string name="facebook_app_id">941172442617747</string>
  <string name="url_term">http://static.bukuma.io/bkm_app/terms-of-use.html</string>
  <string name="url_privacy">http://static.bukuma.io/bkm_app/privacy-policy.html</string>
  <string name="url_commercial">http://static.bukuma.io/bkm_app/s-c-t-l.html</string>
  <string name="url_licence">http://static.bukuma.io/bkm_app/licence_android.html</string>
  <string name="url_delivery">http://static.bukuma.io/bkm_app/guide/delivery_compare.html</string>
  <string name="url_packaging_method">http://static.bukuma.io/bkm_app/guide/sell.html#section02-02</string>
  <string name="url_trouble_with_trading">http://static.bukuma.io/bkm_app/faq.html#section2</string>
  <string name="url_price">http://static.bukuma.io/bkm_app/faq.html#section1-01</string>
  <string name="url_flow">http://static.bukuma.io/bkm_app/guide/flow.html</string>
  <string name="url_freight">http://static.bukuma.io/bkm_app/faq.html#section1-04</string>
  <string name="url_pay">http://static.bukuma.io/bkm_app/faq.html#section1-07</string>
  <string name="url_edit_or_delete">http://static.bukuma.io/bkm_app/faq.html#section1-13</string>
  <string name="url_notification">http://static.bukuma.io/bkm_app/faq.html#section1-16</string>
  <string name="url_evaluation">http://static.bukuma.io/bkm_app/faq.html#section2-01</string>
  <string name="url_cancel">http://static.bukuma.io/bkm_app/faq.html#section2-02</string>
  <string name="url_different">http://static.bukuma.io/bkm_app/faq.html#section2-07</string>
  <string name="error">エラー</string>
  <string name="ok">OK</string>
  <string name="cancel">キャンセル</string>
  <string name="close">閉じる</string>
  <string name="send">送信</string>
  <string name="done">完了</string>
  <string name="block">ブロック</string>
  <string name="report">通報する</string>
  <string name="not_done">未完了</string>
  <string name="next">次へ</string>
  <string name="loading">読み込み中…</string>
  <string name="error_tryagain">エラーが発生しました、もう一度試してください</string>
  <string name="empty">未入力</string>
  <string name="empty_optional">未入力(任意)</string>
  <string name="nickname">ニックネーム</string>
  <string name="gender">性別</string>
  <string name="email_address">メールアドレス</string>
  <string name="password">パスワード</string>
  <string name="password_confirm">パスワード確認</string>
  <string name="invitation_code">招待コード</string>
  <string name="choose_photo">画像を選択</string>
  <string name="money_unit">¥%,d</string>
  <string name="discount">%1$d％OFF</string>
  <string name="gender_male">男性</string>
  <string name="gender_female">女性</string>
  <string name="gender_other">無回答/その他</string>
  <string name="gender_none">選択なし</string>
  <string name="dialog_phone_not_verify_message">電話番号を認証していません</string>
  <string name="dialog_phone_not_verify_ok">認証する</string>
  <string name="dialog_update_title">アップデート情報</string>
  <string name="dialog_update_message">新しいバージョンのブクマ！が公開されました。\n最新版にアップデートしてください。</string>
  <string name="dialog_update_now">アップデート</string>
  <string name="dialog_update_later">今はしない</string>
  <string name="dialog_maintenance_title">ただいまメンテナンス中です</string>
  <string name="dialog_maintenance_description">メンテナンス終了まで数時間かかる場合がございます。少々お待ちください</string>
  <string name="dialog_maintenance_button">詳細を確認する</string>
  <string name="title_notification">お知らせ</string>
  <string name="title_todo">取引一覧</string>
  <string name="title_login">ログイン</string>
  <string name="title_login_reset">パスワードのリセット</string>
  <string name="title_register">会員登録</string>
  <string name="title_register_phone">電話番号の確認</string>
  <string name="title_profile_edit">プロフィール設定</string>
  <string name="title_setting_mail">メールとパスワード</string>
  <string name="title_email_update">メールの編集</string>
  <string name="title_password_update">パスワードの編集</string>
  <string name="title_money">売上確認・振込手続き</string>
  <string name="title_money_request">口座指定</string>
  <string name="title_money_confirm">振込申請金額を入力</string>
  <string name="title_point">ポイント</string>
  <string name="title_notification_setting">通知設定</string>
  <string name="title_block">ブロックリスト</string>
  <string name="title_address">お届け先住所</string>
  <string name="title_address_edit">お届け先情報</string>
  <string name="title_creditcard">クレジットカード情報</string>
  <string name="title_creditcard_title">クレジットカードの追加</string>
  <string name="title_activities">お知らせ</string>
  <string name="title_purchase">購入手続き</string>
  <string name="title_transaction">取引画面</string>
  <string name="title_point_transaction">履歴</string>
  <string name="title_publish">商品を出品する</string>
  <string name="login_title">会員登録で%dポイント贈呈中！</string>
  <string name="login_description">新規ダウンロードキャンペーン中。アカウント登録で%dポイントをプレゼントしています。</string>
  <string name="login_facebook">Facebookで登録/ログイン</string>
  <string name="login_email">メールアドレスでログイン</string>
  <string name="register_email">メールアドレスで登録</string>
  <string name="login_dialog_register">すでにアカウントをお持ちの方はこちら</string>
  <string name="login_dialog_login">ログインせず新たに登録する</string>
  <string name="login_dialog_error">ログイン失敗しました。もう一度お試し下さい</string>
  <string name="login_dialog_success">ログインに成功しました</string>
  <string name="login_reset_password">パスワードを忘れた方は<a href="forgot">こちら</a></string>
  <string name="login_reset_password_hint">現在のメールアドレス</string>
  <string name="login_reset_password_confirm_message">パスワードをリセットし、再設定用のメールを送信しますか?</string>
  <string name="login_reset_password_success_title">パスワードをリセットしました。</string>
  <string name="login_reset_password_success_message">再設定用のメールを送信しましたので、ご確認ください</string>
  <string name="login_reset_password_error_email_empty">メールアドレスを入力してください</string>
  <string name="login_reset_password_error_email_invalid">不正なメールアドレスです</string>
  <string name="login_reset_password_error">ユーザーが見つかりません</string>
  <string name="invite_finished_title">レビューを送信しました</string>
  <string name="invite_finished_good_title">取引相手の評価を送信しました</string>
  <string name="invite_review_title">よろしければアプリのレビューにご協力ください</string>
  <string name="invite_review_desc">一言でも感想いただけると開発の励みになります！</string>
  <string name="invite_review_button">ストアにレビューを書いてみる</string>
  <string name="invite_description">取引終了です！お疲れさまでした！</string>
  <string name="invite_friend">友達にブクマ！を紹介する</string>
  <string name="invite_back_home">ホームに戻る</string>
  <string name="invite_none_button">今後表示させない</string>
  <string name="invite_late_button">後でレビューする</string>
  <string name="navigation_home">ホーム</string>
  <string name="navigation_news">運営からのお知らせ</string>
  <string name="navigation_like">いいねした商品</string>
  <string name="navigation_sell">出品中の商品</string>
  <string name="navigation_cart">購入した商品</string>
  <string name="navigation_setting">設定</string>
  <string name="navigation_howto">ブクマ！の使い方</string>
  <string name="navigation_contact">お問い合わせ</string>
  <string name="delete_user_title">ブクマ！を退会する</string>
  <string name="delete_user_description">ブクマを退会する理由をご選択してください。</string>
  <string name="delete_user_button">退会する</string>
  <string name="delete_user_comment_hint">ブクマへのご意見・ご要望がございましたらご自由にご記入ください。</string>
  <string name="delete_user_reason_no_book">出品が少ない</string>
  <string name="delete_user_reason_cant_sell">出品した本が売れない</string>
  <string name="delete_user_reason_user_trouble">取引に不安がある</string>
  <string name="delete_user_reason_not_to_understand">使い方が分からない</string>
  <string name="delete_user_reason_hard_to_use">アプリが使いにくい</string>
  <string name="delete_user_reason_no_use">もう使わなくなったから</string>
  <string name="delete_user_reason_manegement">運営側に不満がある</string>
  <string name="delete_user_reason_use_other_service">他サービスを利用するから</string>
  <string name="delete_user_reason_other">その他</string>
  <string name="delete_minor_reason_no_interesting_book">目当ての本がなかった</string>
  <string name="delete_minor_reason_no_good_book">良いと思える商品が少ない</string>
  <string name="delete_minor_reason_no_like_category">好きなカテゴリの本が少ない</string>
  <string name="delete_minor_reason_expensive_published_book">出品されている書籍の価格が高い</string>
  <string name="delete_minor_reason_user_trouble">ユーザー同士でのトラブルがあった</string>
  <string name="delete_minor_reason_unknown_fear">見知らぬ人とのやり取りが怖い</string>
  <string name="delete_minor_reason_normal_or_bad">普通・悪い評価をつけられた</string>
  <string name="delete_minor_reason_publish_method">出品方法について</string>
  <string name="delete_minor_reason_purchase_method">購入方法について</string>
  <string name="delete_minor_reason_delivery">配送について</string>
  <string name="delete_minor_reason_price">価格設定について</string>
  <string name="delete_minor_reason_package">梱包について</string>
  <string name="delete_minor_reason_pay">決済の選択肢が少ない</string>
  <string name="delete_minor_reason_anonymous">匿名配送がないので不安</string>
  <string name="delete_minor_reason_no_found">探している本が出てこない</string>
  <string name="delete_minor_reason_bug">不具合が多い</string>
  <string name="delete_minor_reason_no_item">全て売り切った・売るものがなくなったから</string>
  <string name="delete_minor_reason_busy">忙しくて使う時間がないから</string>
  <string name="delete_minor_reason_app_capacity">アプリの容量が少ないから</string>
  <string name="delete_minor_reason_go_abroad">海外へ行くから</string>
  <string name="delete_minor_reason_notification">お知らせが多い</string>
  <string name="delete_minor_reason_management">運営とのやり取りに不満がある</string>
  <string name="delete_minor_reason_merucari">メルカリ</string>
  <string name="delete_minor_reason_kauru">カウル</string>
  <string name="delete_minor_reason_fril">フリル</string>
  <string name="delete_minor_reason_rakuma">ラクマ</string>
  <string name="delete_minor_reason_monokyun">モノキュン！</string>
  <string name="delete_minor_reason_otamart">オタマート</string>
  <string name="delete_minor_reason_restriction">機能を制限されたから</string>
  <string name="delete_minor_reason_bored">飽きたから</string>
  <string name="money_request_header">振込先口座の設定</string>
  <string name="money_request_input_bank">銀行</string>
  <string name="money_request_input_bank_hint">(例)三井住友銀行</string>
  <string name="money_request_input_account">口座種別</string>
  <string name="money_request_input_branch">支店コード</string>
  <string name="money_request_input_branch_hint">(例)432</string>
  <string name="money_request_input_accountno">口座番号</string>
  <string name="money_request_input_accountno_hint">(例)2134567</string>
  <string name="money_request_input_firstname">口座名義 (セイ)</string>
  <string name="money_request_input_firstname_hint">(例)ヤマモト</string>
  <string name="money_request_input_lastname">口座名義 (メイ)</string>
  <string name="money_request_input_lastname_hint">(例)サブロウ</string>
  <string name="address_edit_title_name">お名前</string>
  <string name="address_edit_title_address">お住まい</string>
  <string name="address_edit_title_tel">連絡先</string>
  <string name="address_edit_input_firstname">姓 (全角)</string>
  <string name="address_edit_input_firstname_hint">(例)山本</string>
  <string name="address_edit_input_lastname">名 (全角)</string>
  <string name="address_edit_input_lastname_hint">(例)三郎</string>
  <string name="address_edit_input_firstname_kana">姓 (カナ)</string>
  <string name="address_edit_input_firstname_kana_hint">(例)ヤマモト</string>
  <string name="address_edit_input_lastname_kana">名 (カナ)</string>
  <string name="address_edit_input_lastname_kana_hint">(例)サブロウ</string>
  <string name="address_edit_input_postal">郵便番号</string>
  <string name="address_edit_input_postal_hint">(例)0000000</string>
  <string name="address_edit_input_prefecture">都道府県</string>
  <string name="address_edit_input_prefecture_hint">(例)東京都</string>
  <string name="address_edit_input_city">市町村区</string>
  <string name="address_edit_input_city_hint">(例)渋谷区</string>
  <string name="address_edit_input_houseno">番地</string>
  <string name="address_edit_input_houseno_hint">(例)渋谷99–99</string>
  <string name="address_edit_input_housename">建物名</string>
  <string name="address_edit_input_housename_hint">(例)青山ビル 102(任意)</string>
  <string name="address_edit_input_phone">電話番号</string>
  <string name="address_edit_input_phone_hint">(例)09012345678(任意)</string>
</resources>