<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/list_separator"
      android:padding="16dp"
      android:text="@string/address_edit_title_name"
      android:textSize="12sp"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/firstname_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_firstname"
      app:hint="@string/address_edit_input_firstname_hint"/>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/list_separator"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/lastname_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_lastname"
      app:hint="@string/address_edit_input_lastname_hint"/>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/list_separator"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/firstname_kana_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_firstname_kana"
      app:hint="@string/address_edit_input_firstname_kana_hint"/>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/list_separator"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/lastname_kana_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_lastname_kana"
      app:hint="@string/address_edit_input_lastname_kana_hint"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/list_separator"
      android:padding="16dp"
      android:text="@string/address_edit_title_address"
      android:textSize="12sp"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/postcode_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_postal"
      app:hint="@string/address_edit_input_postal_hint"
      app:input="decimal"/>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/list_separator"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/prefecture_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_prefecture"
      app:hint="@string/address_edit_input_prefecture_hint"
      app:entries="@array/prefectures"/>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/list_separator"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/city_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_city"
      app:hint="@string/address_edit_input_city_hint"/>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/list_separator"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/houseno_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_houseno"
      app:hint="@string/address_edit_input_houseno_hint"/>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/list_separator"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/housename_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_housename"
      app:hint="@string/address_edit_input_housename_hint"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/list_separator"
      android:padding="16dp"
      android:text="@string/address_edit_title_tel"
      android:textSize="12sp"/>

    <jp.com.labit.bukuma.ui.custom.FormView
      android:id="@+id/tel_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/address_edit_input_phone"
      app:hint="@string/address_edit_input_phone_hint"/>

  </LinearLayout>

</ScrollView>
